[package]
name = "rask-x86_64"
version = "0.1.0"
edition = "2024"
description = "x86_64 architecture-specific implementation for Rask"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrischtel/rask"
readme = "README.md"

[dependencies]
rask-common = { version = "0.1.0", path = "../rask-common" }
